force-app/main/default/objects/Asset/fields/Additional_Disc_Amt__c.field-meta.xml
<CustomField>
    <fullName>Additional_Disc_Amt__c</fullName>
    <description>Additional Discount for this Subscription, if expressed as an amount</description>
    <inlineHelpText>Additional Discount for this Subscription, if expressed as an amount</inlineHelpText>
    <label>Additional Disc. (Amt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>