force-app/main/default/objects/Asset/fields/ARR_Category__c.field-meta.xml
<CustomField>
    <fullName>ARR_Category__c</fullName>
    <description>Identifies which Revenue lifecycle category the ARR calculations fall under.</description>
    <label>ARR Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ARR_Category</valueSetName>
    </valueSet>
</CustomField>