force-app/main/default/objects/Asset/fields/Asset_ID_18_Character__c.field-meta.xml
<CustomField>
    <fullName>Asset_ID_18_Character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset ID (18 Character)</label>
    <type>Text</type>
</CustomField>