force-app/main/default/objects/Asset/fields/Billing_Type__c.field-meta.xml
<CustomField>
    <fullName>Billing_Type__c</fullName>
    <description>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</description>
    <inlineHelpText>The billing type that defines when the billing occurs. Billing in advance lets you bill your customers for products or services before you provide them; Billing in arrears lets you bill your customers after the products or services are provided.</inlineHelpText>
    <label>Billing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance</fullName>
            </value>
            <value>
                <fullName>Arrears</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>