force-app/main/default/objects/Asset/fields/Charge_Type__c.field-meta.xml
<CustomField>
    <fullName>Charge_Type__c</fullName>
    <description>The type of the product charge. This is a system field that is derived from the associated product.</description>
    <inlineHelpText>The type of the product charge. This is a system field that is derived from the associated product.</inlineHelpText>
    <label>Charge Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Charge_Type</valueSetName>
    </valueSet>
</CustomField>