force-app/main/default/objects/Asset/fields/Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Price__c</fullName>
    <description>Price the end user paid for this subscription.</description>
    <inlineHelpText>Price paid for this subscription.</inlineHelpText>
    <label>Customer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>