force-app/main/default/objects/Asset/fields/Discount_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Discount_Per_Unit__c</fullName>
    <label>Discount Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>