force-app/main/default/objects/Asset/fields/Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit__c</fullName>
    <label>Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>