force-app/main/default/objects/Asset/fields/Gross_Profit_Per_User__c.field-meta.xml
<CustomField>
    <fullName>Gross_Profit_Per_User__c</fullName>
    <label>Gross Profit Per User</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>