force-app/main/default/objects/Asset/fields/Has_Consumption_Schedules__c.field-meta.xml
<CustomField>
    <fullName>Has_Consumption_Schedules__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this subscription has at least one consumption schedule</description>
    <inlineHelpText>Indicates if this subscription has at least one consumption schedule</inlineHelpText>
    <label>Has Consumption Schedules</label>
    <type>Checkbox</type>
</CustomField>