force-app/main/default/objects/Asset/fields/Legacy_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Legacy_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Legacy External ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>