force-app/main/default/objects/Asset/fields/Line_Level_ARR__c.field-meta.xml
<CustomField>
    <fullName>Line_Level_ARR__c</fullName>
    <label>Line-Level ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>