force-app/main/default/objects/Asset/fields/List_Price__c.field-meta.xml
<CustomField>
    <fullName>List_Price__c</fullName>
    <description>List price for this subscription product.</description>
    <inlineHelpText>List price for this subscription product.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>