force-app/main/default/objects/Asset/fields/Net_Total__c.field-meta.xml
<CustomField>
    <fullName>Net_Total__c</fullName>
    <label>Net Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>