force-app/main/default/objects/Asset/fields/NetPrice__c.field-meta.xml
<CustomField>
    <fullName>NetPrice__c</fullName>
    <description>Net price for this subscription.</description>
    <inlineHelpText>Net price for this subscription.</inlineHelpText>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>