force-app/main/default/objects/Asset/fields/OriginalQuoteLine__c.field-meta.xml
<CustomField>
    <fullName>OriginalQuoteLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Exists for convenience of not having to run relationship queries.</description>
    <inlineHelpText>Original Quote Line of the asset.</inlineHelpText>
    <label>Original Quote Line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets (Original Quote Line)</relationshipLabel>
    <relationshipName>OriginalQuoteLine</relationshipName>
    <type>Lookup</type>
</CustomField>