force-app/main/default/objects/Asset/fields/ProductName__c.field-meta.xml
<CustomField>
    <fullName>ProductName__c</fullName>
    <description>Pulls in the Product Name</description>
    <formula>Product2.Name</formula>
    <inlineHelpText>Pulls in the Product Name</inlineHelpText>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>