force-app/main/default/objects/Asset/fields/Quoteline__c.field-meta.xml
<CustomField>
    <fullName>Quoteline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Quote line that generated this subscription.</description>
    <inlineHelpText>Quote line that generated this subscription.</inlineHelpText>
    <label>Quote line</label>
    <referenceTo>QuoteLineItem</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Assets</relationshipName>
    <type>Lookup</type>
</CustomField>