force-app/main/default/objects/Asset/fields/RevisedAsset__c.field-meta.xml
<CustomField>
    <fullName>RevisedAsset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup the Revised Asset for this field.</description>
    <inlineHelpText>Lookup the Revised Asset for this field.</inlineHelpText>
    <label>Revised Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Assets</relationshipLabel>
    <relationshipName>Revisions</relationshipName>
    <type>Lookup</type>
</CustomField>