force-app/main/default/objects/Asset/fields/Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider__c</fullName>
    <formula>TEXT(Account.Service_Provider__c)</formula>
    <label>Service Provider</label>
    <type>Text</type>
</CustomField>