force-app/main/default/objects/Asset/fields/Subscription_Term_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Term_Implementation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Product Identifier</label>
    <type>Checkbox</type>
</CustomField>