force-app/main/default/objects/Asset/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <label>Subscription Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Subscription_Type</valueSetName>
    </valueSet>
</CustomField>