force-app/main/default/objects/Asset/fields/SubscriptionTerm__c.field-meta.xml
<CustomField>
    <fullName>SubscriptionTerm__c</fullName>
    <label>Subscription Term</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>