force-app/main/default/objects/Asset/fields/Techvera_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Techvera_Product_Type__c</fullName>
    <label>Techvera Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Type</valueSetName>
    </valueSet>
</CustomField>