force-app/main/default/objects/Asset/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <label>Vendor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Vendor</valueSetName>
    </valueSet>
</CustomField>